--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
 </head>
 <body>
 <div class="container">
-	<div class="center">
-		<textarea class="form-control" id="easy-text-textarea" cols="50" rows="5"></textarea>
+	<div class="backdrop">
+		<div class="highlights"></div>
 	</div>
+	<textarea>This demo shows how to highlight bits of text within a textarea. Alright, that's a lie. You can't actually render markup inside a textarea. However, you can fake it by carefully positioning a div behind the textarea and adding your highlight markup there. JavaScript takes care of syncing the content and scroll position from the textarea to the div, so everything lines up nicely. Hit the toggle button to peek behind the curtain. And feel free to edit this text. All capitalized words will be highlighted.</textarea>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-<script src="libs/jquery-highlighttextarea/jquery.highlighttextarea.min.js"></script>
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="libs/jquery-highlighttextarea/jquery.highlighttextarea.min.css">
 
 <!-- Main App Script -->
 <script src="js/main.js"></script>
 
+<script src="js/highlight-textarea.js"></script>
 <link rel="stylesheet" href="css/style.css">
 
 </body>
