Add Heading and Description. Improve Default Text

--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div>
+	<h1>Easy Text</h1>
+	<p>Write only using the top english words.</p>
+</div>
 <div class="container">
 	<div class="backdrop">
 		<div class="highlights"></div>
 	</div>
-	<textarea>This demo shows how to highlight bits of text within a textarea. Alright, that's a lie. You can't actually render markup inside a textarea. However, you can fake it by carefully positioning a div behind the textarea and adding your highlight markup there. JavaScript takes care of syncing the content and scroll position from the textarea to the div, so everything lines up nicely. Hit the toggle button to peek behind the curtain. And feel free to edit this text. All capitalized words will be highlighted.</textarea>
+	<textarea>Easy to understand information:
+Write anything using just the top words. It makes it easy for anyone to understand what you write if you follow this.
+
+Alternate Description (Complex):
+This is a text editor which recommends you to use only the most frequently used words in English.
+
+-=-=-=-=-=-=
+
+Using this, you can write:
+- A message that anybody can understand
+- And something even a kid can follow
+
+Remove this and start writing yours.</textarea>
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
