Changed Default Textarea Text

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 	<textarea>Easy to understand information:
 Write anything using just the top words. It makes it easy for anyone to understand what you write if you follow this.
 
-Alternate Description (Complex):
-This is a text editor which recommends you to use only the most frequently used words in English.
+Alternate Complex Description:
+This is a text editor which recommends you to use only the most frequently used words.
 
 -=-=-=-=-=-=
 
 Using this, you can write:
-- A message that anybody can understand
+- Messages that anyone can easily understand
 - And something even a kid can follow
 
-Remove this and start writing yours.</textarea>
+Start writing now!</textarea>
 
 </div>
 
