style: Add Textarea autofocus Attribute

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="backdrop">
 		<div class="highlights"></div>
 	</div>
-	<textarea>Easy to understand information:
+	<textarea autofocus>Easy to understand information:
 Write anything using just the top words. It makes it easy for anyone to understand what you write if you follow this.
 
 Alternate Complex Description:
