--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div>
+<div class="center">
 	<h1>Easy Text</h1>
 	<p>Write only using the top english words.</p>
 </div>
