refactor: Change Default Textarea Text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<div class="highlights"></div>
 	</div>
 	<textarea autofocus>Easy to understand information:
-Write anything using just the top words. It makes it easy for anyone to understand what you write if you follow this.
+Write anything using only the top words. It makes it easy for anyone to understand.
 
 Alternate Complex Description:
-This is a text editor which recommends you to use only the most frequently used words.
+This is a text editor which recommends you to use only the most frequently used words. It makes your text convenient to comprehend.
 
 -=-=-=-=-=-=
 
