refactor: Changed Title To Easy Write

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Easy Text</title>
+	<title>Easy Write</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="center">
-	<h1>Easy Text</h1>
+	<h1>Easy Write</h1>
 	<p>Write only using the top english words.</p>
 </div>
 <div class="container">
