Add Footer Linking to Twitter adeekshith

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ Start writing now!</textarea>
 
 </div>
 
+<footer>
+	<a class="btn btn-twitter" href="https://twitter.com/adeekshith" target="_blank">@adeekshith</a>
+</footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 <!-- Main App Script -->
