style: Add FontAwesome and Add Twitter Button In Footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Start writing now!</textarea>
 </div>
 
 <footer>
-	<a class="btn btn-twitter" href="https://twitter.com/adeekshith" target="_blank">@adeekshith</a>
+	<a class="btn btn-twitter" href="https://twitter.com/adeekshith" target="_blank"><i class="fa fa-twitter"></i>&nbsp;@adeekshith</a>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -40,6 +40,9 @@ Start writing now!</textarea>
 
 <script src="js/highlight-textarea.js"></script>
 <link rel="stylesheet" href="css/style.css">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 </body>
 </html>
