--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Start writing now!</textarea>
 </div>
 
 <footer>
+	<a class="btn btn-primary btn-outline" href="https://github.com/adeekshith/easy-write" target="_blank"><i class="fa fa-code"></i>&nbsp;Code</a>
 	<a class="btn btn-twitter" href="https://twitter.com/adeekshith" target="_blank"><i class="fa fa-twitter"></i>&nbsp;@adeekshith</a>
 </footer>
 
