refactor: Change Default Textarea Text

--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
 	<textarea autofocus>Easy to understand information:
 Write anything using only the top words. It makes it easy for anyone to understand.
 
-Alternate Complex Description:
-This is a text editor which recommends you to use only the most frequently used words. It makes your text convenient to comprehend.
-
+Text gets highlighted like this when you use an uncommon word.
 -=-=-=-=-=-=
 
-Using this, you can write:
+This helps you to write:
 - Messages that anyone can easily understand
 - And something even a kid can follow
 
-Start writing now!</textarea>
+Remove this text and start writing now!</textarea>
 
 </div>
 
