--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="center">
 	<h1>Easy Write</h1>
-	<p>Write only using the top english words.</p>
+	<p>A simple text editor which allows only the most common words.</p>
 </div>
 <div class="container">
 	<div class="backdrop">
