feat: Select Pre Populated Textarea Text By Default

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="backdrop">
 		<div class="highlights"></div>
 	</div>
-	<textarea autofocus>Easy to understand information:
+	<textarea id="easy-write-textarea" autofocus>Easy to understand information:
 Write anything using only the top words. It makes it easy for anyone to understand.
 
 Text gets highlighted like this when you use an uncommon word.
