docs: Changed Default textarea Text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<textarea id="easy-write-textarea" autofocus>Easy to understand information:
 Write anything using only the top words. It makes it easy for anyone to understand.
 
-Text gets highlighted like this when you use an uncommon word.
+Text gets highlighted when you use an uncommon word.
 -=-=-=-=-=-=
 
 This helps you to write:
