docs: Changed Default Textarea Text

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<div class="backdrop">
 		<div class="highlights"></div>
 	</div>
-	<textarea id="easy-write-textarea" autofocus>Easy to understand information:
-Write anything using only the top words. It makes it easy for anyone to understand.
+	<textarea id="easy-write-textarea" autofocus>Write anything using only the top words. It makes it easy for anyone to understand.
 
 Text gets highlighted when you use an uncommon word.
 -=-=-=-=-=-=
