refactor: Add Description meta Tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Easy Write</title>
+
+	<meta name="description" content="A web based text editor which allows only the most common words.">
+	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
