docs: Changed Title Description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="center">
 	<h1>Easy Write</h1>
-	<p>A simple text editor which allows only the most common words.</p>
+	<p>Write anything using only the most common words.</p>
 </div>
 <div class="container">
 	<div class="backdrop">
