--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@ Remove this text and start writing now!</textarea>
 	<a class="btn btn-twitter" href="https://twitter.com/adeekshith" target="_blank"><i class="fa fa-twitter"></i>&nbsp;@adeekshith</a>
 </footer>
 
+<!-- App Styles -->
+<link rel="stylesheet" href="css/style.css">
+
+<!-- JQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 <!-- Main App Script -->
 <script src="js/main.js"></script>
 
+<!-- App Script -->
 <script src="js/highlight-textarea.js"></script>
-<link rel="stylesheet" href="css/style.css">
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
