refactor: Add Two OpenGraph Properties

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="description" content="A web based text editor which allows only the most common words.">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta property="og:title" content="Easy Write" />
+	<meta property="og:type" content="website" />
+	<!--<meta property="og:url" content="http://easywrite.parishod.com" />-->
+	<!--<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />-->
 </head>
 <body>
 <div class="center">
