seo: Add Canonical URL

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta property="og:type" content="website" />
 	<!--<meta property="og:url" content="http://easywrite.parishod.com" />-->
 	<!--<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />-->
+
+	<link rel="canonical" href="http://easywrite.parishod.com/">
 </head>
 <body>
 <div class="center">
