refactor: Add Favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Easy Write</title>
+	<link rel="icon" type="image/png" href="assets/favicon.png">
 
 	<meta name="description" content="A web based text editor which allows only the most common words.">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
