refactor: Add OpenGraph and SchemaOrg Meta Tags

--- a/index.html
+++ b/index.html
@@ -2,16 +2,29 @@
 <html>
 <head>
 	<title>Easy Write</title>
-	<link rel="icon" type="image/png" href="http://easywrite.parishod.com/assets/favicon.png">
+	<link rel="icon"
+		  type="image/png"
+		  href="assets/easy-write-fav.png">
 
-	<meta name="description" content="A web based text editor which allows only the most common words.">
+	<meta name="description" content="Write using only the top 1000 words. It makes the text easy to understand.">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+	<meta charset="utf-8">
+	<meta name="author" content="Deekshith Allamaneni">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<!-- Open Graph Protocol Markup -->
 	<meta property="og:title" content="Easy Write" />
+	<meta property="og:description" content="Write using only the top 1000 words. It makes the text easy to understand.">
 	<meta property="og:type" content="website" />
 	<!--<meta property="og:url" content="http://easywrite.parishod.com" />-->
 	<!--<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />-->
+	<!-- End Open Graph Protocol Markup -->
+
+	<!-- ItemProps SchemaOrg Product tags -->
+	<meta itemprop="name" content="Easy Write">
+	<meta itemprop="description" content="Write using only the top 1000 words. It makes the text easy to understand.">
+	<!--<meta itemprop="image" content="http://dov.parishod.com/assets/images/dov-icon-beside-link-screenshot.png">-->
+	<!-- End ItemProps SchemaOrg Product tags -->
 
 	<link rel="canonical" href="http://easywrite.parishod.com/">
 </head>
