seo: Add OpenGraph and SchemaOrg image, url

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<meta property="og:title" content="Easy Write" />
 	<meta property="og:description" content="Write using only the top 1000 words. It makes the text easy to understand.">
 	<meta property="og:type" content="website" />
-	<!--<meta property="og:url" content="http://easywrite.parishod.com" />-->
-	<!--<meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />-->
+	<meta property="og:url" content="http://easywrite.parishod.com" />
+	<meta property="og:image" content="http://easywrite.parishod.com/assets/easy-write-scr.png" />
 	<!-- End Open Graph Protocol Markup -->
 
 	<!-- ItemProps SchemaOrg Product tags -->
 	<meta itemprop="name" content="Easy Write">
 	<meta itemprop="description" content="Write using only the top 1000 words. It makes the text easy to understand.">
-	<!--<meta itemprop="image" content="http://dov.parishod.com/assets/images/dov-icon-beside-link-screenshot.png">-->
+	<meta itemprop="image" content="http://easywrite.parishod.com/assets/easy-write-scr.png">
 	<!-- End ItemProps SchemaOrg Product tags -->
 
 	<link rel="canonical" href="http://easywrite.parishod.com/">
