--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		  type="image/png"
 		  href="assets/easy-write-fav.png">
 
-	<meta name="description" content="Write using only the top 1000 words. It makes the text easy to understand.">
+	<meta name="description" content="Write clearly using only 1,000 commonly used words">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta charset="utf-8">
 	<meta name="author" content="Deekshith Allamaneni">
@@ -14,7 +14,7 @@
 
 	<!-- Open Graph Protocol Markup -->
 	<meta property="og:title" content="EasyWrite" />
-	<meta property="og:description" content="Write using only the top 1000 words. It makes the text easy to understand.">
+	<meta property="og:description" content="Write clearly using only 1,000 commonly used words">
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://easywrite.parishod.com" />
 	<meta property="og:image" content="http://easywrite.parishod.com/assets/easy-write-scr.png" />
@@ -22,7 +22,7 @@
 
 	<!-- ItemProps SchemaOrg Product tags -->
 	<meta itemprop="name" content="EasyWrite">
-	<meta itemprop="description" content="Write using only the top 1000 words. It makes the text easy to understand.">
+	<meta itemprop="description" content="Write clearly using only 1,000 commonly used words">
 	<meta itemprop="image" content="http://easywrite.parishod.com/assets/easy-write-scr.png">
 	<!-- End ItemProps SchemaOrg Product tags -->
 
