--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 <div class="center">
 	<h1>EasyWrite</h1>
-	<p>Write anything using only the most common words.</p>
+	<p>Write clearly using only 1,000 commonly used words</p>
 </div>
 <div class="container">
 	<div class="backdrop">
