style: Change Title, Meta OG and SchemaOrg Description

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>EasyWrite</title>
+	<title>EasyWrite: Write clearly using only 1,000 commonly used words</title>
 	<link rel="icon"
 		  type="image/png"
 		  href="assets/easy-write-fav.png">
 
-	<meta name="description" content="Write clearly using only 1,000 commonly used words">
+	<meta name="description" content="Write clearly using only 1,000 commonly used words making your text easy to understand for anyone across the world.">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta charset="utf-8">
 	<meta name="author" content="Deekshith Allamaneni">
@@ -14,7 +14,7 @@
 
 	<!-- Open Graph Protocol Markup -->
 	<meta property="og:title" content="EasyWrite" />
-	<meta property="og:description" content="Write clearly using only 1,000 commonly used words">
+	<meta property="og:description" content="Write clearly using only 1,000 commonly used words making your text easy to understand for anyone across the world.">
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://easywrite.parishod.com" />
 	<meta property="og:image" content="http://easywrite.parishod.com/assets/easy-write-scr.png" />
@@ -22,7 +22,7 @@
 
 	<!-- ItemProps SchemaOrg Product tags -->
 	<meta itemprop="name" content="EasyWrite">
-	<meta itemprop="description" content="Write clearly using only 1,000 commonly used words">
+	<meta itemprop="description" content="Write clearly using only 1,000 commonly used words making your text easy to understand for anyone across the world.">
 	<meta itemprop="image" content="http://easywrite.parishod.com/assets/easy-write-scr.png">
 	<!-- End ItemProps SchemaOrg Product tags -->
 
